--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,3 +32,15 @@ jobs:
       run: npm test -- --coverage
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
+      
+    - name: Deploy
+      run: |
+        git config --global user.name nilay302
+        git config --global user.email nilayshirke52@gmail.com
+         git remote set-url origin https://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@github.com/practice-website-wlug
+         npm run deploy
+      env:
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+          repository: ${{ github.repository }}
