--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nilay302.github.io/wlug",
+  "homepage": "https://nilay302.github.io/Practice-website-wlug",
   "name": "wlug",
   "version": "0.1.0",
   "private": true,
